--- a/stylesheet.css
+++ b/stylesheet.css
@@ -155,3 +155,31 @@ h1{
  0% { opacity: 1; }
  100% { opacity: 0.15; }
 }
+
+.circle {
+  color: black;
+  text-align: center;
+  position: absolute;
+  top: -5px;
+  right: -5px;
+  border-radius: 50%;
+  font-size: 10px;
+  line-height: 15px;
+  width: 16px;
+  height: 16px;
+  background-color: red;
+  z-index: 999;
+  display: none;
+}
+
+.visible{
+  display: initial;
+}
+
+.nav-item-wrapper a{
+  padding: 0 !important;
+}
+
+.nav-item-content{
+  padding: 10px 15px;
+}
