--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,5 @@
 html * {
-  font-family: "Roboto",Arial, sans-serif !important;
+  font-family: "Montserrat",Arial, sans-serif !important;
 }
 h1{
   margin-top: 0 !important;
@@ -14,8 +14,7 @@ h1{
 
 .long-term-forecast li {
   width: 14%;
-  min-width: 60px;
-  font-size: 20px;
+  font-size: 100%;
   vertical-align: top;
   margin-bottom: 10px;
 }
@@ -30,10 +29,13 @@ h1{
 }
 
 .short-term-forecast li{
-  width: 12%;
-  min-width: 60px;
-  font-size: 16px;
+  width: 8%;
+  font-size: 100%;
   margin-bottom: 10px;
+}
+
+.short-term-forecast li img{
+  width: 100%;
 }
 
 .current-weather{
@@ -61,32 +63,31 @@ h1{
 
 .current-weather .date{
   font-size: 14px;
+  margin-bottom: 10px;
 }
 
-.geosuggest {
-  font-size: 16px;
+.react-autosuggest__container {
+  
   line-height: 24px;
   position: relative;
   text-align: left;
   display: inline-block;
   vertical-align: middle;
 }
-.geosuggest__input {
+
+.react-autosuggest__input {
+  font-size: 18px;
   width: 100%;
   border: 2px solid transparent;
-  box-shadow: 0 0 1px #3d464d;
   padding: .15em .5em;
   -webkit-transition: border 0.2s, box-shadow 0.2s;
           transition: border 0.2s, box-shadow 0.2s;
 }
-.geosuggest__input:focus {
+.react-autosuggest__input:focus {
   border-color: #0ce3ac;
 }
-.geosuggest__suggests {
+.react-autosuggest__suggestions-container {
   position: absolute;
-  top: 100%;
-  left: 0;
-  right: 0;
   max-height: 25em;
   padding: 0;
   margin-top: -1px;
@@ -98,31 +99,16 @@ h1{
   list-style: none;
   z-index: 5;
   color: black;
-}
-.geosuggest__suggests--hidden {
-  max-height: 0;
-  overflow: hidden;
-  border-width: 0;
-
+  width: 100%;
 }
 
-.geosuggest-item {
+.react-autosuggest__suggestion {
   font-size: 18px;
-  font-size: 1rem;
-  padding: .5em .65em;
+  padding: .15em .5em;
   cursor: pointer;
 }
-.geosuggest-item:hover,
-.geosuggest-item:focus {
+.react-autosuggest__suggestion--focused {
   background: #f5f5f5;
-}
-.geosuggest-item--active {
-  background: #267dc0;
-  color: #fff;
-}
-.geosuggest-item--active:hover,
-.geosuggest-item--active:focus {
-  background: #ccc;
 }
 
 .react-spinner {
@@ -181,10 +167,40 @@ h1{
   display: initial;
 }
 
+.nav-item-wrapper{
+  margin-right: 10px;
+}
+
+.nav-item-wrapper:last-child{
+  margin-right: 0;
+}
+
 .nav-item-wrapper a{
   padding: 0 !important;
 }
 
 .nav-item-content{
   padding: 10px 15px;
+}
+
+.referral-container{
+  margin-top: 20px;
+}
+.referral-container img{
+  width: 250px;
+}
+
+.photo-of-the-day-container{
+  background-color: rgba(55,90,127, 0.3);
+  padding: 20px;
+  margin-top: 20px;
+}
+
+.photo-of-the-day-container img {
+  width: 100%;
+}
+
+.photo-title{
+  margin-top: 5px;
+  font-weight: bold;
 }
