--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,9 +8,8 @@ h1, h2, h3, h4{
 
 body{
   background-image: url("./images/sky.jpg");
-  background-size: cover;
-  background-attachment: fixed;
-  background-repeat: no-repeat;
+
+  background-attachment: scroll;
   color: white;
   padding-top: 60px;
 }
@@ -22,6 +21,10 @@ body{
 
 canvas{
   max-height: 200px;
+}
+
+p{
+  margin: 0 !important;
 }
 
 .fade-wait-leave {
